# Multimodal

./: .env.example  .gitignore  01_generate_diagrams.py  02_generate_conversations.py  03_prepare_dataset.py  04_train.py  05_merge_and_export.py  06_evaluate.py  07_inference.py  Copy_of_Homework_2_Multimodal_Fusion_and_Alignment.ipynb  README.md  Systems_Design_Complete_Guide.docx  mmai_hw1.ipynb  mmai_hw1.py  pyproject.toml  run_pipeline.sh  written_answers.md
data/: repo_list.json  repo_list_test.json
data/commit_pairs/: commit_pairs.json
data/commit_pairs/formbricks_pr7399/: ground_truth_diff.txt  repo_ir.json  spec.json  teacher_plan.json
data/commit_pairs/loco_pr1745/: ground_truth_diff.txt  repo_ir.json  spec.json  teacher_plan.json
data/commit_pairs/pocketbase_pr6744/: ground_truth_diff.txt  repo_ir.json  spec.json  teacher_plan.json
data/repo_irs/free-programming-books/: repo_ir.json  spec.json  teacher_plan.json
data/repo_irs/public-apis/: repo_ir.json  spec.json  teacher_plan.json
data/repo_irs/system-design-primer/: repo_ir.json  spec.json  teacher_plan.json
data/repo_irs_test/halo/: repo_ir.json
docs/: neurips_2025.tex
prompts/: eval_prompts.json  system_design_prompts.json
scripts/: check_commit_pairs.py  check_extraction.py  extract_commit_pairs.py  extract_repo_ir.py  fetch_test_repos.py  generate_training_data.py  inspect_data.py  mine_diagrams.py  normalize_spec.py  run_extraction_batch.py  scrape_repos.py  train_grpo_tinker.py  validate_training_compat.py
src/repodesign/: __init__.py
tests/: test_extractors.py  test_schemas.py
(+26 files in other folders)
